# sectrans

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs  nocert.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
