[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
shared = { path = "../shared" }
tokio-rustls = "0.26.1"
tokio = { version = "1.42.0", features = ["full"] }
